:sparkles: backend fully operational for adding an new activity to DB